fix: test WhenOpponentScoreLessThan5